--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,7 +37,8 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Install Azure CLI
       run: |
-        python -m pip install -U --force-reinstall pip pip install azure-cli==2.29    
+        python -m pip install -U --force-reinstall pip pip install azure-cli==2.29
+        az version
     - name: Test with pytest
       run: |
-        pytest
+        pytest -v
